--- a/index.html
+++ b/index.html
@@ -1,85 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Insure landing page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Insure landing page</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Fraunces:opsz,wght@9..144,700&family=Karla:wght@400;700&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
 
-  How we work
-  Blog
-  Account
-  View plans
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <header class="header">
+      <a href="" class="homelink">
+        <img src="./images/logo.svg" alt="logo" class="logo" />
+      </a>
+      <button class="burger">
+        <img
+          src="./images/icon-hamburger.svg"
+          alt="open"
+          role="open"
+          class="burger-img"
+        />
+      </button>
+      <button class="close">
+        <img
+          src="./images/icon-close.svg"
+          alt="close"
+          role="close"
+          class="close-img"
+        />
+      </button>
+      <nav class="nav nav--main">
+        <ul class="nav--main__list">
+          <li class="nav--item">
+            <a href="#" class="nav__link">How we work</a>
+          </li>
+          <li class="nav--item">
+            <a href="#" class="nav__link">Blog</a>
+          </li>
+          <li class="nav--item">
+            <a href="#" class="nav__link">Account</a>
+          </li>
+        </ul>
+        <button class="nav__btn">
+          <a href="#" class="nav__link-btn">View plans</a>
+        </button>
+      </nav>
+    </header>
+    <main>
+      <section class="humanizing">
+        <div class="humanizing--info">
+          <h1 class="info__title">Humanizing your insurance.</h1>
+          <p class="info__excerpt">
+            Get your life insurance coverage easier and faster. We blend our
+            expertise and technology to help you find the plan that’s right for
+            you. Ensure you and your loved ones are protected.
+          </p>
+          <button class="nav__btn info__btn">
+            <a href="#" class="nav__link-btn">View plans</a>
+          </button>
+        </div>
 
-  Humanizing your insurance.
+        <img
+          src="./images/image-intro-desktop.jpg"
+          alt="intro"
+          class="humanizing--img"
+        />
+      </section>
+      <section class="different">
+        <h2 class="different__title">We’re different</h2>
+        <div class="different__items process">
+          <img
+            src="./images/icon-snappy-process.svg"
+            alt="snappy"
+            class="items--img"
+          />
+          <h3 class="items--title">Snappy Process</h3>
+          <p class="items--excerpt">
+            Our application process can be completed in minutes, not hours.
+            Don’t get stuck filling in tedious forms.
+          </p>
+        </div>
+        <div class="different__items prices">
+          <img
+            src="./images/icon-affordable-prices.svg"
+            alt="prices"
+            class="items--img"
+          />
+          <h3 class="items--title">Affordable Prices</h3>
+          <p class="items--excerpt">
+            We don’t want you worrying about high monthly costs. Our prices may
+            be low, but we still offer the best coverage possible.
+          </p>
+        </div>
+        <div class="different__items first">
+          <img
+            src="./images/icon-people-first.svg"
+            alt="prices"
+            class="items--img"
+          />
+          <h3 class="items--title">People First</h3>
+          <p class="items--excerpt">
+            Our plans aren’t full of conditions and clauses to prevent payouts.
+            We make sure you’re covered when you need it.
+          </p>
+        </div>
+        <div class="different__info">
+          <h4 class="different__info--title">
+            Find out more about how we work
+          </h4>
+          <button class="different__btn">
+            <a href="#" class="nav__link-btn">How we work</a>
+          </button>
+        </div>
+      </section>
+      Our company How we work Why Insure? View plans Reviews Help me FAQ Terms
+      of use Privacy policy Cookies Contact Sales Support Live chat Others
+      Careers Press Licenses
 
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
-
-  View plans
-
-  We’re different
-
-  Snappy Process
-
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
