--- a/index.html
+++ b/index.html
@@ -92,42 +92,46 @@
         />
       </section>
       <section class="different">
-        <h2 class="different__title">We’re different</h2>
-        <div class="different__items process">
-          <img
-            src="./images/icon-snappy-process.svg"
-            alt="snappy"
-            class="items--img"
-          />
-          <h3 class="items--title">Snappy Process</h3>
-          <p class="items--excerpt">
-            Our application process can be completed in minutes, not hours.
-            Don’t get stuck filling in tedious forms.
-          </p>
+        <div class="test">
+          <h2 class="different__title">We’re different</h2>
         </div>
-        <div class="different__items prices">
-          <img
-            src="./images/icon-affordable-prices.svg"
-            alt="prices"
-            class="items--img"
-          />
-          <h3 class="items--title">Affordable Prices</h3>
-          <p class="items--excerpt">
-            We don’t want you worrying about high monthly costs. Our prices may
-            be low, but we still offer the best coverage possible.
-          </p>
-        </div>
-        <div class="different__items first">
-          <img
-            src="./images/icon-people-first.svg"
-            alt="prices"
-            class="items--img"
-          />
-          <h3 class="items--title">People First</h3>
-          <p class="items--excerpt">
-            Our plans aren’t full of conditions and clauses to prevent payouts.
-            We make sure you’re covered when you need it.
-          </p>
+        <div class="dif-test">
+          <div class="different__items process">
+            <img
+              src="./images/icon-snappy-process.svg"
+              alt="snappy"
+              class="items--img"
+            />
+            <h3 class="items--title">Snappy Process</h3>
+            <p class="items--excerpt">
+              Our application process can be completed in minutes, not hours.
+              Don’t get stuck filling in tedious forms.
+            </p>
+          </div>
+          <div class="different__items prices">
+            <img
+              src="./images/icon-affordable-prices.svg"
+              alt="prices"
+              class="items--img"
+            />
+            <h3 class="items--title">Affordable Prices</h3>
+            <p class="items--excerpt">
+              We don’t want you worrying about high monthly costs. Our prices
+              may be low, but we still offer the best coverage possible.
+            </p>
+          </div>
+          <div class="different__items first">
+            <img
+              src="./images/icon-people-first.svg"
+              alt="prices"
+              class="items--img"
+            />
+            <h3 class="items--title">People First</h3>
+            <p class="items--excerpt">
+              Our plans aren’t full of conditions and clauses to prevent
+              payouts. We make sure you’re covered when you need it.
+            </p>
+          </div>
         </div>
         <div class="different__info">
           <h4 class="different__info--title">
@@ -141,14 +145,22 @@
       Our company How we work Why Insure? View plans Reviews Help me FAQ Terms
       of use Privacy policy Cookies Contact Sales Support Live chat Others
       Careers Press Licenses
-
+      <footer>
+        <div class="footer__box">
+          <div class="footer__info">
+            <a href="" class="homelink">
+              <img src="./images/logo.svg" alt="logo" class="logo" />
+            </a>
+          </div>
+          <div class="footer__menu"></div>
+        </div>
+      </main>
+      </footer>
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Your Name Here</a>.
       </div>
-    </main>
-    <footer></footer>
   </body>
 </html>
