--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
           </button>
         </div>
       </section>
-      Our company How we work Why Insure? View plans Reviews Help me FAQ Terms
-      of use Privacy policy Cookies Contact Sales Support Live chat Others
+            Others
       Careers Press Licenses
       <footer>
         <div class="footer__box">
@@ -151,8 +150,58 @@
             <a href="" class="homelink">
               <img src="./images/logo.svg" alt="logo" class="logo" />
             </a>
+            <div class="footer__info-social">
+              <a href="#" class="info-social">
+                <img src="./images/icon-facebook.svg" alt="facebook" class="facebook">
+              </a>
+              <a href="#" class="info-social">
+                <img src="./images/icon-twitter.svg" alt="twitter" class="twitter">
+              </a>
+              <a href="#" class="info-social">
+                <img src="./images/icon-pinterest.svg" alt="pinterest" class="pinterest">
+              </a>
+              <a href="#" class="info-social">
+                <img src="./images/icon-instagram.svg" alt="instagram" class="instagram">
+              </a>
+            </div>
           </div>
-          <div class="footer__menu"></div>
+          <div class="footer__menu">
+            <div class="footer__menu-clm">
+              <div class="clm-title">Our company</div>
+              <ul class="clm-list">
+                <li class="list-item">How we work </li>
+                <li class="list-item">Why Insure? </li>
+                <li class="list-item">View plans </li>
+                <li class="list-item">Reviews</li>
+              </ul>
+            </div>
+            <div class="footer__menu-clm">
+              <div class="clm-title">Help me</div>
+              <ul class="clm-list">
+                <li class="list-item">FAQ</li>
+                <li class="list-item">Terms
+                  of use</li>
+                <li class="list-item">Privacy policy</li>
+                <li class="list-item">Cookies</li>
+              </ul>
+            </div>
+            <div class="footer__menu-clm">
+              <div class="clm-title">Contact</div>
+              <ul class="clm-list">
+                <li class="list-item">Sales</li>
+                <li class="list-item">Support</li>
+                <li class="list-item">Live chat</li>
+              </ul>
+            </div>
+            <div class="footer__menu-clm">
+              <div class="clm-title">Others</div>
+              <ul class="clm-list">
+                <li class="list-item">Careers</li>
+                <li class="list-item">Press</li>
+                <li class="list-item">Licenses</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </main>
       </footer>
