--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             you. Ensure you and your loved ones are protected.
           </p>
           <button class="nav__btn info__btn">
-            <a href="#" class="nav__link-btn">View plans</a>
+            <a href="#" class="nav__link-btn nav__link-btn-hum">View plans</a>
           </button>
         </div>
 
